# tvc-template

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SKILL.md  package-lock.json  package.json
.github/workflows/: skill-eval.yml  stagex.yml
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: helloworld.rs
crates/helloworld/: Cargo.toml
crates/helloworld/src/: app.rs  cli.rs  client.rs  lib.rs  main.rs  response.rs  router.rs  signing.rs  state.rs
crates/helloworld/src/handlers/: basic.rs  diagnostics.rs  dl.rs  keys.rs  mod.rs  turnkey.rs
crates/tvc-axum/: Cargo.toml
crates/tvc-axum/src/: lib.rs  qos_json_response.rs  signing.rs
crates/tvc-axum/tests/: qos_json.rs
images/helloworld/: Containerfile
skills/tvc-app-builder/: SKILL.md
skills/tvc-app-builder/evals/: evals.json  trigger-results.json  triggers.json
skills/tvc-app-builder/references/: app-examples.md  deployment-troubleshooting.md  template-architecture.md  testing-guide.md  turnkey-api-integration.md  tvc-cli-guide.md
skills/tvc-app-builder/scripts/: eval-triggers.ts  validate.ts
skills/tvc-demo-builder/: SKILL.md
skills/tvc-demo-builder/evals/: evals.json  triggers.json
skills/tvc-demo-builder/references/: app-examples.md  demo-examples.md  testing-guide.md
src/: Cargo.toml
src/e2e/src/: lib.rs
src/e2e/tests/: helloworld.rs
src/helloworld/: Cargo.toml
src/helloworld/src/: main.rs  router.rs
