[workspace]
members = [
  "e2e",
  "metrics",
  "helloworld",
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.0"
publish = false
rust-version = "1.88"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.dependencies]
axum = { version = "0.8.8", default-features = false }
serde_json = "1.0.142"
tokio = { version = "1.47", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["trace"] }
http-body-util = "0.1"
pin-project-lite = "0.2"
prometheus = { version = "0.13", default-features = false }
