[package]
name = "tvc-axum"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "json"] }
http-body-util = { workspace = true }
qos_core = { workspace = true }
qos_hex = { workspace = true }
qos_json = { workspace = true }
serde = { version = "1.0" }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
qos_p256 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
