[package]
name = "tvc-axum"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
http-body-util = { workspace = true }
qos_hex = { workspace = true }
qos_json = { workspace = true }
qos_p256 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
