[package]
name = "tvc-axum"
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
base64 = { workspace = true }
http-body-util = { workspace = true }
qos_json = { workspace = true }
qos_p256 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
